[package]
name = "screenshot_desktop"
version = "0.1.0"
edition = "2021"
description = "Take a screenshot of a screen"
keywords = ["screenshot", "image", "screen", "capture"]
license = "MIT + Apache-2.0"
repository = "https://github.com/GuoJikun/screenshot"
readme = "README.md"
include = ["src/lib.rs", "Cargo.toml", "README.md", "examples/**/*", "LICENSE-Apache-2.0", "LICENSE-MIT"]
authors = ["JK Guo <guojikun486546@163.com>"]

[dependencies]
image = "0.25.2"
scrap = "0.5.0"
